[gd_scene load_steps=8 format=3 uid="uid://bi58jxedn5ouh"]

[ext_resource type="PackedScene" uid="uid://dnm4sj83mwp0i" path="res://scenes/collapsing_cube.tscn" id="1_h7ty8"]
[ext_resource type="Script" path="res://scripts/single_track_cube.gd" id="1_x1ywo"]
[ext_resource type="PackedScene" uid="uid://cy5368pba2n3j" path="res://scenes/midi_receiver.tscn" id="2_vtjjr"]
[ext_resource type="Script" path="res://addons/midi/MidiPlayerAddon.gd" id="4_8vcnk"]
[ext_resource type="PackedScene" uid="uid://hstcclti5c4p" path="res://scenes/waves.tscn" id="5_5o7sb"]
[ext_resource type="PackedScene" uid="uid://8i8dhs3lkmxv" path="res://scenes/tadpole.tscn" id="6_sh683"]

[sub_resource type="Environment" id="Environment_uej73"]
background_mode = 1
ambient_light_color = Color(1, 1, 1, 1)

[node name="SingleTrackCube" type="Node3D"]
script = ExtResource("1_x1ywo")

[node name="SunLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.901455, 0.189983, -0.388954, 0, 0.898542, 0.438889, 0.432873, -0.395639, 0.809995, -1.00209, 1.11291, 0.595618)
light_energy = 4.368

[node name="SpotLight3D" type="SpotLight3D" parent="SunLight"]
transform = Transform3D(0.888201, -0.20165, 0.41284, 0.20165, 0.978465, 0.0440891, -0.41284, 0.0440892, 0.909736, 1.9648, -0.471578, -1.7768)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uej73")

[node name="Camera3D" type="Camera3D" parent="."]
current = true

[node name="CollapseCube" parent="." instance=ExtResource("1_h7ty8")]
visible = false

[node name="MidiReceiver" parent="." instance=ExtResource("2_vtjjr")]

[node name="ArlezMidiPlayer" type="Node" parent="."]
script = ExtResource("4_8vcnk")
file = "res://midi/la_campanella.mid"
soundfont = "res://data/Aspirin-Stereo.sf2"

[node name="Waves" parent="." instance=ExtResource("5_5o7sb")]
visible = false

[node name="DancingSphere" parent="." instance=ExtResource("6_sh683")]

[connection signal="note_off" from="MidiReceiver" to="." method="_on_midi_receiver_note_off"]
[connection signal="note_on" from="MidiReceiver" to="." method="_on_midi_receiver_note_on"]
[connection signal="midi_event" from="ArlezMidiPlayer" to="MidiReceiver" method="_on_arlez_midi_player_midi_event"]
